fix intro section layers issue / add 6 z-index layers in scss / add button secondary style for flat design

--- a/src/assets/scss/framework/positions.scss
+++ b/src/assets/scss/framework/positions.scss
@@ -26,6 +26,8 @@
     bottom: 0;
 }
 
-.layer-1 {
-    z-index: 1;
+@for $index from 0 to 5 {
+    .layer-#{$index} {
+        z-index: $index;
+    }
 }
